@@ -1,3 +1,6 @@
+2009-Apr-10     cpo                     Change Acqiris waveform() to return
+                                        int16 instead of uint16.  Add method
+                                        to get index of first valid point.
 2009-Mar-31	weaver	Tag V00-03-00.	Interface changes require version change.
 2009-Mar-31	weaver	Tag V00-02-05.	Removed TypeId(unsigned) ctor which ignored versions.  Added TwoDGaussianV1.hh.
 2009-Mar-24     cpo     Tag V00-02-04.  Add xtcreader to new app directory.
